--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="@dimen/padding_pantalla"
+    
+    android:orientation="horizontal"
     tools:context=".MainActivity">
 
-    <TextView
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:orientation="vertical"
+        android:layout_gravity="center_vertical"
+        android:gravity="center_horizontal">
+        <TextView
+            style="@style/titulo"
+            android:text="@string/app_name" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:id="@+id/unjug"
+            android:text="@string/un_jugador"
+            style="@style/boton"
+            />
+
+        <RadioGroup
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content">
+            <RadioButton
+                android:id="@+id/facil"
+                android:text="@string/facil"
+                style="@style/radio"/>
+            <RadioButton
+                android:id="@+id/normal"
+                android:text="@string/normal"
+                style="@style/radio"/>
+            <RadioButton
+                android:id="@+id/imposible"
+                android:text="@string/imposible"
+                style="@style/radio"/>
+        </RadioGroup>
+
+        <Button
+            android:id="@+id/dosjug"
+            android:text="@string/dos_jugadores"
+            style="@style/boton"
+            />
+
+
+
+
+    </LinearLayout>
+    <GridLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:columnCount="3"
+        android:rowCount="3"
+        >
+        <ImageView
+            android:id="@+id/a1"
+            style="@style/casilla"></ImageView>
+        <ImageView
+            android:id="@+id/a2"
+            style="@style/casilla"></ImageView>
+        <ImageView
+            android:id="@+id/a3"
+            style="@style/casilla"></ImageView>
+        <ImageView
+            android:id="@+id/b1"
+            style="@style/casilla"></ImageView>
+        <ImageView
+            android:id="@+id/b2"
+            style="@style/casilla"></ImageView>
+        <ImageView
+            android:id="@+id/b3"
+            style="@style/casilla"></ImageView>
+        <ImageView
+            android:id="@+id/c1"
+            style="@style/casilla"></ImageView>
+        <ImageView
+            android:id="@+id/c2"
+            style="@style/casilla"></ImageView>
+        <ImageView
+            android:id="@+id/c3"
+            style="@style/casilla"></ImageView>
+    </GridLayout>
+
+</LinearLayout>
